--- a/zh.wikipedia.org/雅格碧利訴俄亥俄州案.wikitext
+++ b/zh.wikipedia.org/雅格碧利訴俄亥俄州案.wikitext
@@ -24,7 +24,12 @@
 |LawsApplied=[[First Amendment to the United States Constitution|U.S. Const. amends. I]], [[Fourteenth Amendment to the United States Constitution|XIV]]; Ohio Rev. Code § 2905.34
 }}
 
-'''雅格碧利訴俄亥俄州案'''（{{lang-en|Jacobellis v. Ohio}}，{{ussc|378|184|1964}}）是[[美國最高法院]]於1964年所處理的一起案件，該案的關注焦點在於俄亥俄州是否可以因該州政府以認為[[路易斯·馬盧]]的電影《情人{{lang-fr|''Les Amants''}}》涉嫌猥褻內容為由而禁止其放映。
+'''雅格碧利訴俄亥俄州案'''（{{lang-en|Jacobellis v. Ohio}}，{{ussc|378|184|1964}}）是[[美國最高法院]]於1964年所處理的一起案件，該案的關注焦點在於[[俄亥俄州]]是否可以因該州政府以[[路易斯·馬盧]]的電影《情人{{lang-fr|''Les Amants''}}》涉嫌猥褻內容為由而禁止其放映。
 
 == 背景 ==
-尼克·雅各碧利是俄亥俄州利夫蘭高地考文垂村附近高地藝術劇院的經理，在雅格碧利訴俄亥俄州案之中他因被指違反了俄亥俄1963年增補法典中對擁有和展示淫穢
+尼克·雅格碧利是俄亥俄州[[利夫蘭高地]][[考文垂村]]附近高地藝術劇院的經理，在雅格碧利訴俄亥俄州案之中他因被指違反了俄亥俄1963年增補法典中對擁有和展示淫穢的兩項禁令，並由[[凱霍加縣普通法院]]法官定罪，並下令要求支付500美元和2000美元（分別針對前後兩項罪名）的罰款（該罰款數額相當於2019年的22000美元）或者不支付罰款並以參與[[刑事勞工]]抵償。俄亥俄上訴法院以及俄亥俄最高法院維持了雅格碧利的有罪判決。
+
+== 最高法院 ==
+雖然俄亥俄各法院均做出了有罪判決，但美國最高法院卻以認定影片並非淫穢影片所以應當受憲法保護為由推翻了原來的審判結果。不過，法院並沒有在判決基本理由上達成一致，在諸多意見中有四種非常有代表性的不同看法。包括兩位持有不同意見的人在內，沒有任何一個觀點的得到兩位以上法官的肯定。[[小威廉·布倫南]]對此案作出了宣判，但只有亞瑟·戈德堡法官同意他的觀點。
+
+[[休戈·布萊克]]法官和[[威廉·道格拉斯]]法官再次強調了[[第一修正案]]中對任何形式審查的禁令。持反對意見的[[厄爾·華倫]]對法院淫穢判例的混亂表示不滿，
