--- a/zh.wikipedia.org/物語系列.wikitext
+++ b/zh.wikipedia.org/物語系列.wikitext
@@ -1,12 +1,9 @@
 {{About|西尾维新所创作的系列轻小说及其改编动画|日本传统文学的一种体裁|物语}} 
 {{noteTA
 | 1 = 曆=>zh-hans:历;
-| 2 =
 }}
-
 {{refimprove|time=2019-10-06T21:59:25+00:00}}
 {{未完結}}
-
 <!--#region Infobox-->
 {{Infobox animanga/Headerofja
 | title = 物语系列
@@ -771,7 +768,7 @@
 |2015年1月1日
 |ISBN 978-7-5321-5317-6
 |
-* 第零章：曆吸血鬼<!--TODO-->
+* 第零話：曆·吸血鬼
 |-
 !4
 |[[偽物語|偽物語 上]]
@@ -782,7 +779,7 @@
 |2015年1月1日
 |ISBN 978-7-5321-5313-8
 |
-* 第六章：「火憐蜜蜂」<!--TODO-->
+* 第六話：火憐·蜂
 |-
 !5
 |[[偽物語|偽物語 下]]
@@ -793,7 +790,7 @@
 |2015年1月1日
 |ISBN 978-7-5321-5315-2
 |
-* 最終章：「月火鳳凰」<!--TODO-->
+* 最終話：月火·鳳凰
 |-
 !6
 |[[貓物語|貓物語 黑]]
@@ -804,7 +801,7 @@
 |2015年1月1日
 |ISBN 978-7-5321-5364-0
 |
-* 第禁章：「翼家族」<!--TODO-->
+* 第禁話：翼·家族
 |-
 ! colspan="9" |[[物語系列 第二季]]
 |-
@@ -919,9 +916,9 @@
 |尚未發行
 |N/A
 |
-* 第一章：「扇公式」<!--TODO-->
-* 第二章：「育謎語」
-* 第三章：「育迷失」
+* 第一話：扇·公式
+* 第二話：育·謎題
+* 第三話：育·喪失
 |-
 !16
 |[[終物語|終物語 中]]
@@ -932,7 +929,7 @@
 |尚未發行
 |N/A
 |
-* 第四章：「忍盔甲」<!--TODO-->
+* 第體話：忍·鎧甲
 |-
 !17
 |[[終物語|終物語 下]]
@@ -943,9 +940,9 @@
 |尚未發行
 |N/A
 |
-* 第五章：「真宵地獄」<!--TODO-->
-* 第六章：「黑儀約會」
-* 第七章：「扇黑闇」
+* 第五章：真宵·地獄
+* 第六章：黑儀·約會
+* 第七章：扇·黑暗
 |-
 !18
 |[[續·終物語]]
@@ -956,7 +953,7 @@
 |尚未發行
 |N/A
 |
-* 第終話：「曆反轉」<!--TODO-->
+* 最終話：曆·反轉
 |-
 ! colspan="9" |[[物語系列 外傳季]]
 |-
@@ -969,9 +966,9 @@
 |尚未發行
 |N/A
 |
-* 第零話：「育慘敗」<!--TODO-->
-* 第零話：「駿河笨蛋」
-* 第零話：「月火復原」
+* 第一話：育·慘敗
+* 第二話：駿河·傻瓜
+* 第三話：月火·復原
 |-
 !20
 |[[業物語]]
@@ -982,10 +979,10 @@
 |尚未發行
 |N/A
 |
-* 殘酷童話：「美公主」<!--TODO-->
-* 第零話：「雅賽蘿拉享」
-* 第零話：「火憐食人魔」
-* 第零話：「翼睡眠」
+* 殘酷童話：國色天香姬
+* 第零話：雅賽蘿拉·宴饗
+* 第零話：火憐·逢我
+* 第零話：翼·沉眠
 |-
 !21
 |[[撫物語]]
@@ -996,14 +993,14 @@
 |尚未發行
 |N/A
 |
-* 第零話：「撫子平局」<!--TODO-->
+* 第零話：撫子·繪畫
 |-
 !22
 |[[結物語]]
 |2017年1月12日
 |ISBN 978-4-06-283900-6
-|尚未發行
-|N/A
+|2020年9月10日
+|ISBN 978-9-57-109085-6
 |尚未發行
 |N/A
 |
@@ -1046,7 +1043,7 @@
 |-
 !26
 |[[扇物語]]
-|尚未發行
+|2020年10月28日
 |N/A
 |尚未發行
 |N/A
@@ -1208,7 +1205,7 @@
 == 外部連結 ==
 * [http://www.nisioisin-matsuri.com/ 西尾維新祭]{{ja}}
 * [https://web.archive.org/web/20120111062518/http://6109.jp/bakemonogatari/ 官方Blog資訊]{{ja}}
-* [http://ni.siois.in/ 西尾維新official website]{{ja}}
+* [http://ni.siois.in/ 西尾維新official website] {{Wayback|url=http://ni.siois.in/ |date=20151011203552 }}{{ja}}
 * [http://www.my-cartoon.com.tw/monogatari-series/index.html 台灣官網]{{zh-tw}}
 * {{Twitter|nisioisin_info}}
 * {{ann|anime|10196|Bakemonogatari}}
