更新物語系列，移除已經同步至維基語錄的內容。

--- a/zh.wikipedia.org/物語系列.wikitext
+++ b/zh.wikipedia.org/物語系列.wikitext
@@ -109,7 +109,7 @@
 : 和通俗的吸血鬼傳說相同，具有害怕陽光、銀或聖水等等的弱點。
 : 透過不致命的吸血可以製造出「眷屬」，亦即將人類轉化為吸血鬼，轉化之時會伴隨近乎復活程度的治癒效果，可以達到從一條手臂再生出整個人這樣的程度。
 : 然而經過太多輪的傳遞轉化，吸血鬼的血液將過度稀釋，因此轉化失敗的人會變成殭屍。
-: 在本作中做為代表的忍野忍（原Kissshot‧Acerolaorion‧Heartunder‧Blade）還擁有各式各樣的能力，然而不確定是否所有的吸血鬼都具有
+: 在本作中做為代表的忍野忍（原名：姬絲秀忒·雅賽蘿拉莉昂·刃下心{{lang|en|Kissshot Acerolaorion Heartunder Blade}}）還擁有各式各樣的能力，然而不確定是否所有的吸血鬼都具有
 :* 改變自己的體重
 :* 物質具現化
 :* 潛入影子中
@@ -147,7 +147,7 @@
 : 擁有能量吸取的能力，被那種怪異碰到的人類，體力和精力會被完全吸乾，甚至可以導致死亡。障貓的能量吸取是直接碰觸型的常駐能力，所以和牠本身的意志無關。
 
 ; {{nihongo|黑羽川|ブラック羽川（ぶらっくはねかわ）}}
-:
+: 障貓附身在羽川翼身上而產生出來的新品種怪異，由忍野咩咩命名。
 
 ; {{nihongo|圍欄火蜂|囲い火蜂（かこいひばち）}}
 : 傳聞是室町時代出現過的怪異，類似於傳染病，引發使人動彈不得的高燒，可導致死亡。
@@ -168,14 +168,19 @@
 : 本作中出現的[[斧乃木余接]]便是由百年屍體製作而來的「人工」付喪神。
 
 ; {{nihongo|式神|式神（しきがみ）}}<!--TODO-->
+<!--陰陽師によって作られる術者の代理人として働く存在。主従の格付けがなされず術者が式神に成り代わられる例も少なくない。-->
 
 ; {{nihongo|殭屍|キョンシー}}
+<!--作中では主にゾンビと呼ばれる。厳密には、吸血鬼に眷属とされたものの血が定着せず暴走したことで生まれた怪異。メメによると失敗した眷族、劣化した吸血鬼。自我も意思もなく、与えられた本能に忠実に行動する。日光と米を弱点とする。-->
 
 ; {{nihongo|沼地蠟花|沼地蠟花（ぬまち ろうか）}}
+<!--蠟花が死した後に怪異となった存在。だが蠟花自身には、怪異となったことはおろか自分が死んだ自覚さえもなく、作中で蠟花自身が自分の来歴を語ったが、それが真実かどうかは不明。
+悪魔様や沼神様などの様々な名を使い分け、各地で人の悩みを聞き入れ、それを「絶対」に解決するとされる相談屋。ただし行き過ぎた悩みは警察などの然るべき機関にまわす。その実、人の不幸話を蒐集することを目的としている。また、相談事と並行して悪魔（レイニー・デヴィル）のパーツの蒐集も行っている。悪魔のパーツを持つ者の近辺に現れ、根を張り、所有者が相談に訪れると、それを奪う。泥舟は「回収屋」と称していた。
+-->
 
-; {{nihongo|黑暗之影|黒闇（くらやみ） }}
+; {{nihongo|闇|黒闇（くらやみ） }}
 : 與其稱為怪異，其实并不是怪异，而是世界的「理則」，在違反自身本質的怪異身邊出現，加以吞噬的存在。看上去是一團漂浮的黑暗，追逐著目標。
-: 四百年前的Kissshot‧Acerolaorion‧Heartunder‧Blade曾因被人當成神供奉，違反作為吸血鬼之本質而引來黑暗之影。吞噬了四境所有的村民，並襲擊了她與同行的妖怪獵人－死屍累生死郎。后来Kissshot‧Acerolaorion‧Heartunder‧Blade逃到南极之后创造了自己第一个眷属，这符合吸血鬼本质，因此黑影不再追杀Kissshot‧Acerolaorion‧Heartunder‧Blade。
+: 四百年前的姬絲秀忒·雅賽蘿拉莉昂·刃下心曾因被人當成神供奉，違反作為吸血鬼之本質而引來闇。吞噬了四境所有的村民，並襲擊了她與同行的妖怪獵人－死屍累生死郎。后来刃下心逃到南极之后创造了自己第一个眷属，这符合吸血鬼本质，因此黑影不再追杀刃下心。
 : 在《鬼物語》中 追擊身為迷途蝸牛卻不想讓人迷路的八九寺真宵，后因为八九寺真宵成佛不再是怪异（实际上因为比父母早死而下了地狱）不再追杀。
 
 ; {{nihongo|朽繩|クチナワ}}
@@ -192,10 +197,19 @@
 : 基於日本傳統中的「蛇怕蛞蝓，蛞蝓怕青蛙，青蛙怕蛇」之三方牽制關係，是貝木泥舟施加於千石撫子，用來壓抑朽繩之力量的怪異。
 
 ; {{nihongo||よくないもの}}<!--TODO-->
+<!--怪異になる前段階の、怪異の材料となるエネルギー。北白蛇神社など特定の場所に集まり、濃度が高まると怪異と行き遭う確率や怪異現象が発生しやすくなる。怪異の王である吸血鬼は、無自覚にこれを集めてしまう。
+「しのぶメイル」において、初代怪異殺しによって、過去に暦と関わった怪異のもどきとして再現される。また初代怪異殺しが敗れた際に、その体内から溢れた無数の怪異が混ざり合い「よくないもの」へと回帰した。
+「じゅんビルド」では、キスショットの死なないことへの遺志のみの残留思念が、暦の血液あるいは哀川潤の来訪によって活性化されたことで、姿の見えないキスショットとして形成された。-->
 
-; {{nihongo||正体不明}}
+; {{nihongo|真身不明|正体不明}}
+<!--化け物作りの専門家である遠江が生み出した怪異現象。遠江の自制心が形となった『「くらやみ」もどき』であり「必要でないけど欲しいもの」、「やるべきことの邪魔となるもの」を消し去っていた。正体が分からないので基本的に対処のしようがないが、その正体、この場合は生み出した人間が誰かを暴けば、本物の「くらやみ」によって飲まれ消滅する。ただし、正体を「何か」に定義づければ「それ」として実体化させ、存在を固着させられる。-->
 
 ; {{nihongo|忍野扇|忍野扇（おしの おうぎ）}}
+<!--暦が生み出した「正体不明」。暦の自身に対する負い目、引け目、罪悪感、欺瞞といったものに対する自己批判が具現化した「阿良々木暦自身」とも呼べる存在。伊豆湖は「ダークこよみん」と呼び、翼のブラック羽川や撫子のクチナワに近い存在と称した。
+初代怪異殺しが駿河の左手をエナジードレインし、その初代怪異殺しを忍が喰らい、忍とペアリングしている暦に猿の手の内にある「正体不明」の因子が流れ込んだことで誕生した。誕生の経緯から鎧武者が内包していた「よくないもの」の能力や、そして忍の物質創造スキルを身に付けており、それらを駆使して専門家らを町から追放したり、かつての直江津高校の教室や火事で消失した学習塾跡の廃ビルを生み出したりした。
+その出自ゆえ、"忍野扇"の「忍野」は本来"忍野メメ"由来のものではなく、"忍野忍"由来である事が伊豆湖から語られている（同時に、自身が8月にメメの妹を名乗ってしまった事が悪い宣伝になったのだろうと推理している）。
+彼女が作り出した学習塾跡の廃ビルにおける最終局面にて他ならない暦に自らの正体を看破され「くらやみ」によって消滅しそうになるが、彼女を見捨てる事の出来なかった暦によって助けられる。
+さらに、翼に連れられ間一髪で駆け付けた忍野メメ本人によって「僕の可愛い姪っ子」として定義づけられたことで、「怪異〈忍野扇〉」ではなく「忍野メメの姪」としての存在が確定し「くらやみ」の排除対象から外れ九死に一生を得た。-->
 
 ; {{nihongo|人魚|人魚}}
 
@@ -1105,6 +1119,11 @@
 
 2015年12月，官方宣布透过《物语系列》APP发布改编动画《[[曆物語]]》，自2016年1月9日起每星期日更新，全12话。
 <!--#endregion--> 
+
+<!--#region Manga-->
+== 漫畫 ==
+{{main|化物語#漫畫}}
+<!--#endregion-->
 
 === 衍生商品 ===
 
