--- a/zh.wikipedia.org/物語系列.wikitext
+++ b/zh.wikipedia.org/物語系列.wikitext
@@ -1,4 +1,4 @@
-{{About|西尾维新所创作的系列轻小说及其改编动画|日本传统文学的一种体裁|物语}} 
+{{About|西尾维新所创作的系列轻小说及其改编动画|日本传统文学的一种体裁|物语}}
 {{noteTA
 | 1 = 曆=>zh-hans:历;
 }}
@@ -18,25 +18,25 @@
 }}
 {{Infobox animanga/Novel
 | 輕小說 = 1
-| 標題 = 
+| 標題 =
 | 作者 = [[西尾维新]]
 | 插圖 = [[VOFAN]]
 | 出版社 = {{flagicon|Japan}} [[讲谈社]]
 | 其他出版社 = {{flagicon|China}} [[上海文艺出版社]]
 | 連載雜誌 = 梅菲斯特、潘多拉
 | label = [[讲谈社BOX]]
-| 發售日 = 
+| 發售日 =
 | 開始 = 2006年11月
-| 結束 = 
+| 結束 =
 | 冊數 = {{flagicon|Japan}} 26卷（2019年4月17日）<br>{{flagicon|Taiwan}} 20卷（2019年5月10日）<br>{{flagicon|China}} 12卷（2015年5月1日）
-| 話數 = 
-| 其他 = 
+| 話數 =
+| 其他 =
 | 版權 = 西尾 維新
-| 內容 = 
+| 內容 =
 }}
 {{Infobox animanga/Other
 |標題 = 主要作品
-|內容 = 
+|內容 =
 * [[物語系列 第一季]]
 ** [[化物语]]
 ** [[傷物語]]
@@ -69,7 +69,7 @@
 ** [[混物語]]（外傳）
 }}
 {{Infobox animanga/Footerofja}}
-<!--#endregion--> 
+<!--#endregion-->
 
 《'''物語'''》系列是日本小說家[[西尾維新]]在《[[講談社BOX]]》上刊載的[[小說]]，由[[台灣]]插畫家[[VOFAN]]負責其中的插畫。首部作品《化物語》是《講談社BOX》創刊時連載的作品。台灣中文版小說由[[尖端出版]]發行，首部作品《化物語》在2010年7月28日於[[台北市]]的[[漫畫博覽會]]首賣，简体中文版由[[上海文艺出版社]]出版。
 
@@ -216,7 +216,7 @@
 ; {{nihongo||ゴーレム}}
 
 ; {{nihongo|人狼|人狼}}
-<!--#endregion--> 
+<!--#endregion-->
 
 <!--#region Timeline-->
 == 作品內時間線 ==
@@ -273,11 +273,11 @@
 |-
 |曆本來自責而想衝到太陽下自殺。晚上，曆依翼的建議下與姬絲秀忒對決（為了變回人類）。翼中斷了二人的對決。
 |-
-|4月7日||「曆吸血鬼」事件解決。在咩咩的提議下，姬絲秀忒和曆都變成類吸血鬼，失去大部分吸血鬼能力。姬絲秀忒變成8歲的模樣，力量被削弱；曆重新以普通人的身份上學，但仍保留部分吸血鬼的再生能力。 
+|4月7日||「曆吸血鬼」事件解決。在咩咩的提議下，姬絲秀忒和曆都變成類吸血鬼，失去大部分吸血鬼能力。姬絲秀忒變成8歲的模樣，力量被削弱；曆重新以普通人的身份上學，但仍保留部分吸血鬼的再生能力。
 |-
 ! colspan="5" | 阿良良木曆高中3年級
 |-
-|4月8日||高中三年級開學，曆與翼同班。 
+|4月8日||高中三年級開學，曆與翼同班。
 |-
 |4月11日
 |翼與曆在用來供俸石的庭院前協商。
@@ -305,9 +305,9 @@
 |-
 |5月2日-7日||黑羽川每晚襲擊鎮上路人。
 |-
-|5月7日||在咩咩與姬絲秀忒的幫助下，第一次「翼貓」事件落幕。 
+|5月7日||在咩咩與姬絲秀忒的幫助下，第一次「翼貓」事件落幕。
 |-
-| rowspan="4" |5月8日||曆知道了戰場原黑儀（下稱「黑儀」）的秘密。 
+| rowspan="4" |5月8日||曆知道了戰場原黑儀（下稱「黑儀」）的秘密。
 | rowspan="4" |黑儀螃蟹|| rowspan="4" |化物語（上）|| rowspan="4" |01-02
 |-
 |曆帶黑儀見咩咩。
@@ -414,7 +414,7 @@
 |曆水
 |曆物語||04
 |-
-| rowspan="2" |7月29日||在翼的協助下，阿良良木火怜（下稱「火怜」）與貝木泥舟（下稱「貝木」）見面。其間，火怜被貝木注入火蜂怪異的毒，發高燒。 
+| rowspan="2" |7月29日||在翼的協助下，阿良良木火怜（下稱「火怜」）與貝木泥舟（下稱「貝木」）見面。其間，火怜被貝木注入火蜂怪異的毒，發高燒。
 | rowspan="10" |火怜蜜蜂|| rowspan="10" |偽物語（上）|| rowspan="10" |01-07
 |-
 |曆被黑儀拘禁。
@@ -445,7 +445,7 @@
 |千石撫子的幾乎每天的筆記本
 | colspan="2" |近日筆記本官方指南2015
 |-
-| rowspan="6" |8月14日||曆與影縫餘弦（下稱「餘弦」）和斧乃木餘接（下稱「餘接」）相遇。 
+| rowspan="6" |8月14日||曆與影縫餘弦（下稱「餘弦」）和斧乃木餘接（下稱「餘接」）相遇。
 | rowspan="6" |月火鳳凰|| rowspan="6" |偽物語（下）||rowspan="6" |08-11
 |-
 |曆回家。餘弦及餘接爆開阿良良木家的大門，將月火的身體一分為二。
@@ -457,14 +457,14 @@
 |曆與小忍到舊私塾與餘弦及餘接決鬥。
 |-
 |餘弦與餘接自動離開，「月火鳳凰」事件完結。
-|- 
+|-
 | rowspan="2" |8月20日||暑假的最後一天，曆把真宵帶回自己房間。真宵遺留了背包。
 |真宵房間
 | colspan="2" |化物語動畫導覽書<br/>Anime Complete Guidebook
-|- 
+|-
 |曆再次與餘接相會。
 | rowspan="2" |真宵僵屍|| rowspan="2" |傾物語|| rowspan="2" |01
-|- 
+|-
 | rowspan="7" |8月21日<br/>（開學禮）|| 曆為了做暑期功課而請忍時光回流至8月20日。不料時光回流了11年前。
 |-
 |翼遇上正尋找曆的真宵，其後看見了虎的怪異。
@@ -477,7 +477,7 @@
 | rowspan="2" |忍時間|| rowspan="2" |鬼物語|| rowspan="2" |01-02
 |-
 |曆得知小忍的往事後，與真宵、忍、餘接於廢棄私塾再次被不明怪異襲擊。餘接帶眾人逃到镇外的深山。
-|-   
+|-
 |羽川家完全燒毀。
 | rowspan="2"|翼虎|| rowspan="2"|貓物語（白）|| rowspan="2"|01
 |-
@@ -549,10 +549,10 @@
 |-
 |12月某日||黑儀给曆做了5个甜甜圈，小忍吃掉其中一个。
 |曆環面||曆物語||09
-|-  
+|-
 | rowspan="2" |1月1日||貝木在京都接到黑儀的電話工作委託。
 | rowspan="8" |黑儀結局|| rowspan="8" |戀物語|| rowspan="8" |01-04
-|-   
+|-
 |貝木和黑儀為了見面而向沖繩移動。
 |-
 | rowspan="2" |1月2日||貝木到千石家訪問並進行調查。
@@ -576,36 +576,36 @@
 |貝木欺騙撫子失敗。但最終成功令撫子變回人類。貝木被中學生襲擊 重傷。
 |黑儀結局
 |戀物語||05-06
-|- 
+|-
 | rowspan="1" |2月13日||曆發現了自己身上發生的異變，並與餘弦、餘接再會。
 |餘接人偶|| rowspan="1" |憑物語|||01-03
-|-  
+|-
 | rowspan="1" |不明||曆與駿河進行籃球對決。
 |駿河庭|| rowspan="1" colspan="2" |化物語動畫導覽書<br/>Anime Complete Guidebook
-|- 
+|-
 ||2月14日||余接在阿良良木家住。
 |餘接人偶||憑物語||04
-|- 
+|-
 ||2月||余弦居住在北白蛇神社
 | rowspan="2" |曆无事|| rowspan="2" |曆物語|| rowspan="2" |11
-|- 
+|-
 |2月下旬||曆和余弦得到一個教訓。隔天余弦失踪。
-|- 
+|-
 |rowspan="3"|3月13日||曆與扇談論鎧武者的事件。
 |忍盔甲||終物語（中）||12
-|- 
+|-
 |历被伊豆湖杀了。和真宵再次见面。
 |曆死亡||曆物語||12
-|- 
+|-
 |历和正弦在阿鼻地狱再次见面，和真宵活着返回。姬絲秀忒完全复活。
 |真宵地狱|| rowspan="4" |終物語（下）||14-15
-|- 
+|-
 |rowspan="2"|3月14日||历和黑仪约会。
 |黑仪约会||16-17
-|- 
+|-
 |历知道了扇的真面目。咩咩再次登场。真宵成神。姬絲秀忒再次作为忍野忍回到历的影子里。
 |rowspan="2"|扇黑闇|| rowspan="2"| 18-20
-|- 
+|-
 |rowspan="2"|3月15日||历、黑仪和翼毕业。
 |-
 |翼启程
@@ -630,8 +630,8 @@
 | colspan="2" |忍物語
 |-
 |4月9日||駿河聽到「惡魔大人」的傳聞。駿河與蠟花相遇。
-| rowspan="9" |駿河惡魔|| rowspan="9" |花物語 || rowspan="9" |01-05 
-|-   
+| rowspan="9" |駿河惡魔|| rowspan="9" |花物語 || rowspan="9" |01-05
+|-
 |4月10日|| 駿河的惡魔之手從左腕上消失了。
 |-
 |4月16日||駿河離鎮參加大學學園開放活動。在回家的途中駿河與貝木相遇。
@@ -719,7 +719,7 @@
 | rowspan="2" |8月24日||曆與小忍被喪屍圍堵。成長後的真宵用大米救了兩人。||rowspan="4" |04
 |-
 |曆閱讀了咩咩託真宵給曆的信，得知世界毀滅的原因。
-|- 
+|-
 | rowspan="2" |8月26日||曆與小忍與姬絲秀忒對決。姬丝秀忒见到另一时间线关系亲密的曆與小忍后，自愿被小忍吃掉。
 |-
 |曆與小忍藉著吸收姬絲秀忒的力量時空跳躍到原來的世界線。
@@ -1018,10 +1018,10 @@
 |尚未發行
 |N/A
 |
-* 第一話：「全歌人魚」<!--TODO-->
-* 第二話：「臨魔像」
-* 第三話：「圖章狼」
-* 第四話：「葛人間」
+* 第一話：「全歌·人魚」<!--TODO-->
+* 第二話：「臨·泥人」
+* 第三話：「美留·狼人」
+* 第四話：「葛·人」
 |-
 ! colspan="9" |[[物語系列 怪物季]]
 |-
@@ -1029,8 +1029,8 @@
 |[[忍物語]]
 |2017年7月20日
 |ISBN 978-4-06-283902-0
-|尚未發行
-|N/A
+|2020年11月19日
+|ISBN 978-9-57-109225-6
 |尚未發行
 |N/A
 |
@@ -1058,7 +1058,7 @@
 !26
 |[[扇物語]]
 |2020年10月28日
-|N/A
+|ISBN 978-4-06-521158-8
 |尚未發行
 |N/A
 |尚未發行
@@ -1118,7 +1118,7 @@
 2015年10月7日，官方為《[[傷物語]]》重新投入前線宣傳，宣布本作將會分為三部上映。第一部《傷物語Ⅰ 鐵血篇》於2016年1月8日上映，片長64分鐘；第二部《傷物語Ⅱ 熱血篇》於2016年8月19日上映，片長69分鐘；第三部《傷物語Ⅲ 冷血篇》於2017年1月6日上映，片長83分鐘。
 
 2015年12月，官方宣布透过《物语系列》APP发布改编动画《[[曆物語]]》，自2016年1月9日起每星期日更新，全12话。
-<!--#endregion--> 
+<!--#endregion-->
 
 <!--#region Manga-->
 == 漫畫 ==
@@ -1205,7 +1205,7 @@
 |}
 * CD上共分為99段、其中第1－2段「入學測驗」與「合格發佈」、第44－45段「春假」與「黃金周」、第53－54段「階段」與「怪談」分別被合併為一段。
 * 首曲目合唱{{lang|ja|思い出アルバム}}包含在第1段；最終曲目合唱{{lang|ja|ありがとうさようなら}}包含在第99段中。
-<!--#endregion--> 
+<!--#endregion-->
 
 ==== 遊戲 ====
 ; {{nihongo||化物語 ポータブル}}
@@ -1245,4 +1245,4 @@
 [[Category:2012年电子游戏]]
 [[Category:PlayStation Portable游戏]]
 [[Category:視覺小說]]
-<!--#endregion--> 
+<!--#endregion-->
