--- a/zh.wikipedia.org/物語系列.wikitext
+++ b/zh.wikipedia.org/物語系列.wikitext
@@ -1101,7 +1101,7 @@
 
 <!--#region Anime-->
 === 動畫 ===
-2009年，講談社宣佈啟動[[西尾維新動畫PROJECT]]，本作系列第一部《[[化物語]]》與《[[刀語]]》分別展開改編為動畫的計劃。同年7月，《化物語》動畫版正式播放，全15集，其中1至12集於各個電視台播放，13至15集則通過官方網站播放。製作中期曾出現作畫進度無法趕上播放進度的問題，狀況可見於播放第5話後插入總集篇、第10話出現過多文字兼用卡、以至網絡話數之播放日期相差甚遠等。然而，有關狀況無阻本作牽起熱潮，並創下了多項[[電視動畫]]作品之影碟銷售紀錄，同時間接束成了原作系列第二季的出現。
+2009年，講談社宣佈啟動[[西尾維新動畫PROJECT]]，本作系列第一部《[[化物語]]》與《[[刀語]]》分別展開改編為動畫的計劃。同年7月，《化物語》動畫版正式播放，全15集，其中1至12集於各個電視台播放，13至15集則通過官方網站播放。製作中期曾出現作畫進度無法趕上播放進度的問題，狀況可見於播放第5話後插入總集篇、第10話出現過多文字兼用卡、以至網絡話數之播放日期相差甚遠等。然而，有關狀況無阻本作牽起熱潮，並創下了多項[[電視動畫]]作品之影碟銷售紀錄，同時間接促成了原作系列第二季的出現。
 
 2010年7月，於化物語網路播放完畢時，公佈前傳兼系列第一部《[[傷物語]]》即將製作成動畫，隨後於2011年3月30日再度公佈作品形式為[[動畫電影]]，原定計劃於2012年內上映。惟後來因著各項製作上的取捨，有關時期的字句被刪去。
 
